* 2005-04-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix to allow unicode font names
	- Lots more unicode fixes (like unicode labels, etc). Unicode
	characters can now be used for filenames, and axis labels
	- Handle bad descriptors in import dialog
	
* 2005-04-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed fitting for old versions of numarray (no isnan)
	- Fixed data reading bug, where numbers on columns which aren't
	used are propagated to next line
	- Show busy cursor while reading data and opening files, saving
	files and exporting data
	- Empty document is not "dirty", so don't show save dialog
	- Added circ, odot, and (left|right|up|down) arrow in LaTeX mode
	
* 2005-04-16 Jeremy Sanders <jeremy@jeremysanders.net>
	- Get distutils working properly with standard distutils
	- Added histogram example

* 2005-04-14 Jeremy Sanders <jeremy@jeremysanders.net>
	- Introduced patch by James Graham to make the save warning dialog
	use verbs instead of yes/no
	- Imported distutils (setuputils), and added support for distutils
	- Add scripts to start veusz from bin directory
	
* 2005-04-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Imported data files may be linked to the document, which means
	their data won't be saved with the document, but reloaded each
	time it is loaded
	
* 2005-04-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- Added exception dialog to send in bug reports
	- Axis values checked for being round wrong way
	
* 2005-04-09 Jeremy Sanders <jeremy@jeremysanders.net>
	- Different types of error bars supported (diamond, curve, box)
	- Improve function plot line clipping near edges
	- Filled regions above/below/left/right of function
	- Filled regions above/below xy points (or histogram)
	- Axis setting to match one axis to another (equal scales)
	- resolve function moved to document from commandinterface
	(helps axis matching)
	
* 2005-04-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed widget moving buttons! - correct algorithm now