@@ -1,3 +1,8 @@
+* 2005-04-21 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Widgets can now be added if a parent allows the widget as parent
+	- New item selected after widget is added
+	- Removed text widget from menu and tooltip
+	
 * 2005-04-19 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fix to allow unicode font names
 	- Lots more unicode fixes (like unicode labels, etc). Unicode
